# krisha-kz-cli

./: .gitignore  AGENTS.md  CLAUDE.md  PLAN.md  README.md  pyproject.toml
src/krisha/: cli.py  client.py  models.py  output.py  parse_list.py  parse_show.py  urls.py
src/krisha/api/: __init__.py  client.py  constants.py  endpoints.py  models.py  search.py
