[project]
name = "krisha-kz-cli"
version = "0.1.0"
description = "CLI for extracting real-estate listings from krisha.kz"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx[http2]>=0.27",
    "selectolax>=0.3.21",
    "typer>=0.12",
    "pydantic>=2.6",
    "orjson>=3.10",
]

[project.scripts]
krisha = "krisha.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/krisha"]
